# LCM

./: README.rst  pyproject.toml
lcm/: least_common_multiple.py
tests/: test_lcm.py
