[tool.poetry]
name = "LCM"
version = "0.1.0"
description = ""
authors = ["teo <teodantes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
lcm = "lcm.least_common_multiple:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
